fix misaligned main container
BS3 commit ed7fe0e

--- a/docs/assets/css/docs.css
+++ b/docs/assets/css/docs.css
@@ -14,8 +14,7 @@ body {
 }
 
 /*  */
-.bs-docs-body > .container,
-.bs-docs-footer .container {
+.bs-docs-footer {
   padding-left:  15px;
   padding-right: 15px;
 }
